deployment/deployment-dev.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: app-service-dev
  labels:
    app: react-app-dev
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30100
  selector:
    app: react-app-dev

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: react-app-dev
  labels:
    app: react-app-dev
spec:
  selector:
    matchLabels:
      app: react-app-dev
  strategy:
    type: Recreate
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 0
  template:
    metadata:
      labels:
        app: react-app-dev
    spec:
      containers:
        - name: react-app-dev
          image: alexeyguskov/react-app:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "300Mi"
              cpu: "300m"
            limits:
              memory: "2000Mi"
              cpu: "500m"
          volumeMounts:
          - name: app-persistent-volume
            mountPath: /data
      volumes:
      - name: app-persistent-volume
        persistentVolumeClaim:
          claimName: pvc-app-dev
