deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress-prod
  namespace: prod
spec:
  defaultBackend:
    service:
      name: app-service-prod 
      port:
        number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress-dev
  namespace: dev
spec:
  defaultBackend:
    service:
      name: app-service-dev
      port:
        number: 8080
